--- a/ecclesia/lectio/mateo/mateo6.html
+++ b/ecclesia/lectio/mateo/mateo6.html
@@ -841,7 +841,7 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo">El ayuno en secreto 6-16-19</h2>
+      <h2 class="subtitulo">El ayuno en secreto 6,16-18</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
@@ -1036,35 +1036,139 @@
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p></p>
+            <p>
+              Mateo 6,19–21 presenta algunas variaciones significativas entre distintas traducciones reconocidas.<br>
+              Aunque el mensaje esencial se mantiene —la advertencia contra acumular tesoros terrenales y la exhortación a buscar tesoros celestiales—, las diferencias en vocabulario y estilo pueden influir en la interpretación.<br>
+              Aquí te muestro una comparación:<br>
+               Mateo 6,19–21 en distintas traducciones<br>
+              Traducción&nbsp;&nbsp;Texto de Mateo 6,19–21<br>
+              Biblia de Jerusalén&nbsp;&nbsp;“No os amontonéis tesoros en la tierra, donde hay polilla y herrumbre que corroen...”<br>
+              Reina-Valera 1960&nbsp;&nbsp;“No os hagáis tesoros en la tierra, donde la polilla y el orín corrompen...”<br>
+              Biblia de las Américas&nbsp;&nbsp;“No acumulen para sí tesoros en la tierra, donde la polilla y el óxido destruyen...”<br>
+              Nueva Versión Internacional (NVI)&nbsp;&nbsp;“No acumulen para sí tesoros en la tierra, donde la polilla y el óxido destruyen...”<br>
+              Interlineal Griego-Español&nbsp;&nbsp;“No estén atesorando tesoros sobre la tierra, donde polilla y herrumbre hacen desaparecer...”<br>
+             + Principales diferencias<br>
+              • Verbo principal: “amontonéis”, “hagáis”, “acumulen”, “atesorando” — cada uno con matices distintos sobre la acción de guardar riquezas.<br>
+              • Elementos destructivos: “herrumbre”, “orín”, “óxido” — reflejan distintas traducciones del griego brosis, que puede referirse a corrosión o deterioro.<br>
+              • Estilo y tono: La Biblia de Jerusalén tiende a un lenguaje más literario, mientras que la NVI y la Biblia de las Américas usan un estilo más contemporáneo y accesible.<br>
+              Estas variaciones no alteran el núcleo doctrinal del pasaje, pero sí pueden enriquecer la comprensión dependiendo del enfoque teológico o lingüístico que se prefiera.<br>
+            </p>
+          </details>
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
-          <details class="select">
+            <details class="select">
             <summary>Paralelos</summary>
-            <p></p>
+            <p>
+              La perícopa de Mateo 6,19–21 tiene varios textos y temas paralelos en la Biblia que refuerzan su mensaje sobre el valor de los tesoros celestiales frente a los terrenales.<br>
+             + Textos paralelos<br>
+              Texto	Contenido relacionado<br>
+              Lucas 12,33–34	“Vended lo que poseéis y dad limosna; haced bolsas que no se envejezcan, tesoro en los cielos que no se agote... Porque donde está vuestro tesoro, allí estará también vuestro corazón.” — Muy similar en estructura y mensaje.<br>
+              1 Timoteo 6,17–19	Pablo exhorta a los ricos a no poner su esperanza en las riquezas, sino en Dios, y a ser generosos para “atesorar buen fundamento para lo porvenir.”<br>
+              Proverbios 23,4–5	“No te afanes por adquirir riquezas; sé prudente y desiste. ¿Has de poner tus ojos en las riquezas, siendo ningunas?” — Advertencia contra la ilusión de la riqueza.<br>
+              Colosenses 3,1–2	“Buscad las cosas de arriba, donde está Cristo... Poned la mira en las cosas de arriba, no en las de la tierra.” — Llamado a orientar el corazón hacia lo eterno.<br>
+             + Temas relacionados<br>
+              •	Desapego material: La enseñanza de Jesús invita a liberarse del apego a lo terrenal.<br>
+              •	Pureza del corazón: El vínculo entre el tesoro y el corazón sugiere que lo que valoramos revela nuestra verdadera orientación espiritual.<br>
+              •	Seguridad eterna vs. temporal: Las riquezas terrenales son vulnerables; las celestiales son incorruptibles.<br>
+              •	Generosidad y justicia: Acumular tesoros en el cielo implica actos de amor, justicia y misericordia.<br>
+            </p>
+            </details>
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p></p>
+            <p>
+              Mateo 6,19–21, como parte del Sermón del Monte, está cargado de profundidad teológica.<br>
+              A partir del análisis de fuentes reconocidas, encontramos estos temas teológicos más relevantes de esta perícopa:<br>
+              + 1. La transitoriedad de lo material<br>
+              • Jesús contrasta los tesoros terrenales —corruptibles, vulnerables a la polilla, el óxido y el robo— con los tesoros celestiales, que son eternos.<br>
+              • Teológicamente, esto subraya la naturaleza perecedera del mundo frente a la realidad eterna del Reino de Dios.<br>
+             + 2. El corazón como centro espiritual<br>
+              • “Donde esté tu tesoro, allí estará también tu corazón” revela que el corazón humano se orienta hacia lo que valora.<br>
+              • Esto conecta con la teología del deseo y la orientación espiritual: lo que amamos revela quiénes somos y hacia dónde vamos.<br>
+              3. Confianza en Dios vs. seguridad material<br>
+              • El texto invita a poner la confianza en Dios, no en bienes materiales.<br>
+              • Esto se relaciona con la teología de la providencia, que enseña que Dios cuida de sus hijos y provee lo necesario.<br>
+             4. La justicia como tesoro eterno<br>
+              • Algunos comentarios destacan que la justicia, la verdad y la pureza son “tesoros” que no se corrompen.<br>
+              • Esto se vincula con la ética del Reino, donde las virtudes espirituales tienen valor eterno.<br>
+              5. La espiritualidad del desprendimiento<br>
+              • El llamado a no acumular riquezas terrenales implica una espiritualidad del desapego, que libera al creyente para vivir con libertad interior y generosidad.<br>
+              <br><br>
+              Este pasaje no solo enseña sobre economía espiritual, sino que plantea una visión radical del ser humano como orientado hacia lo eterno<br>
+            </p>
+          </details>
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
-          <details class="select">
+            <details class="select">
             <summary>Patrística</summary>
-            <p></p>
+            <p>
+              Los Padres de la Iglesia reflexionaron sobre Mateo 6,19–21, reconociendo su profundo contenido espiritual y moral.<br>
+              Aunque no todos escribieron comentarios directos sobre esta perícopa, muchos abordaron sus temas en sermones, tratados y cartas<br>
+              Padres de la Iglesia que trataron esta perícopa o sus temas<br>
+               San Agustín de Hipona<br>
+              • En sus Sermones y La Ciudad de Dios, Agustín habla del contraste entre los bienes temporales y los eternos.<br>
+              • Enseña que el corazón humano debe orientarse hacia Dios, no hacia las riquezas, porque “el amor ordenado es el que ama lo eterno más que lo temporal”.<br>
+             San Juan Crisóstomo<br>
+              • En sus Homilías sobre el Evangelio de Mateo, comenta directamente este pasaje.<br>
+              • Subraya que acumular tesoros celestiales significa practicar la misericordia, la limosna y la justicia.<br>
+              • Dice: “No es la riqueza lo que condena, sino el apego a ella”.<br>
+               San Gregorio Magno<br>
+              • En sus escritos pastorales, Gregorio advierte contra la ilusión de seguridad que ofrecen los bienes materiales.<br>
+              • Destaca que el verdadero tesoro es la caridad, que permanece en la eternidad.<br>
+              Orígenes<br>
+              • En su enfoque alegórico, interpreta los “ladrones” como las pasiones que roban la paz del alma.<br>
+              • Ve en el “tesoro en el cielo” una imagen de la unión con Dios por medio de la virtud.<br>
+              <br><br>
+             + Temas teológicos tratados por los Padres<br>
+              • Desapego del mundo: La vida cristiana implica renunciar al amor desordenado por lo material.<br>
+              • Tesoro como virtud: Las buenas obras, especialmente la caridad, son el verdadero tesoro que permanece.<br>
+              • El corazón como sede del amor: Lo que el alma ama revela su destino eterno.<br>
+              • La limosna como inversión celestial: Dar a los pobres es “depositar en el banco de Dios”, como decía Crisóstomo.<br>
+          
+            </p>
+            </details>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
-          <details class="select">
+            <details class="select">
             <summary>Magisterio</summary>
-            <p></p>
+            <p>El Magisterio de la Iglesia ha abordado los temas centrales de Mateo 6,19–21 en diversos documentos, enseñanzas y exhortaciones, aunque no siempre citando directamente la perícopa.<br>
+      <br><br>
+     + Enseñanzas del Magisterio sobre los temas de Mateo 6,19–21<br>
+      1. Desapego de los bienes materiales<br>
+      • El Catecismo de la Iglesia Católica (n. 2544–2547) enseña que el cristiano está llamado a la pobreza de espíritu y al desapego de las riquezas, siguiendo el ejemplo de Cristo.<br>
+      • Se afirma que “el deseo de acumular bienes es contrario al espíritu evangélico” y que la verdadera riqueza está en Dios.<br>
+      2. Tesoro en el cielo como obras de caridad<br>
+      • En la encíclica Caritas in Veritate (Benedicto XVI), se subraya que la caridad y la justicia son inversiones eternas, que construyen el Reino de Dios.<br>
+      • El Magisterio promueve una economía al servicio del hombre, no del lucro, lo que se alinea con la idea de “atesorar en el cielo”.<br>
+      3. El corazón como sede de la orientación espiritual<br>
+      • San Juan Pablo II, en su catequesis sobre el Sermón del Monte, explicó que “el corazón humano se revela en lo que ama”, y que el Evangelio llama a una conversión interior que reordene los afectos hacia Dios.<br>
+      4. Confianza en la providencia divina<br>
+      • En Evangelii Gaudium, el Papa Francisco exhorta a no vivir esclavizados por el consumo, sino a confiar en la providencia de Dios y vivir con sencillez.<br>
+      • La acumulación de bienes es vista como una forma de idolatría moderna que desvía el corazón del verdadero tesoro.<br>
+      <br><br>
+       Reflexión doctrinal<br>
+      El Magisterio no condena la riqueza en sí, pero sí el apego desordenado a ella. Mateo 6,19–21 se interpreta como una llamada a vivir con libertad interior, generosidad y orientación hacia lo eterno. La Iglesia enseña que el verdadero tesoro es el amor vivido en obras concretas, especialmente hacia los pobres y necesitados.<br>
+      Puedes explorar más sobre esta enseñanza en este análisis sobre Mateo 6,19–21. (Cautivo Estrella, Pagina Católica)<br><br><a href="https://cautivoestrella.org/">HERMANDAD CAUTIVO ESTRELLA</a>
+            </p>
+            </details>
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -1072,10 +1176,10 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>El único tesoro es Cristo, elegir otro es una tentación que se debe reconocer y vencer con la conversión </li>
+              <li>Video cor meum en cotidianubus actibus meis</li>
+              <li>El Examen diario de conciencia me va señalando el camino de conversión</li>
+              <li>Lo que amamos revela quienes somos y hacia donde vamos</li>
             </ol>
           </details>
         </li>
