--- a/ecclesia/lectio/mateo/mateo6.html
+++ b/ecclesia/lectio/mateo/mateo6.html
@@ -1265,7 +1265,7 @@
       •	Generosidad vs. codicia: El “ojo bueno” es generoso, el “ojo malo” es tacaño y egoísta.<br>
       •	Discernimiento espiritual: El ojo permite ver lo que es justo, verdadero y santo.<br>
       ________________________________________<br>
-      Para una exploración más detallada, puedes consultar fuentes como BibleProject sobre Mateo 6,22-23, que también conecta el pasaje con expresiones idiomáticas hebreas como tov 'ayin (“ojo bueno”) y ra 'ayin (“ojo malo”), muy presentes en la tradición judía y patrística.<br>
+      Para una exploración más detallada, consultar fuentes como BibleProject sobre Mateo 6,22-23, que también conecta el pasaje con expresiones idiomáticas hebreas como tov 'ayin (“ojo bueno”) y ra 'ayin (“ojo malo”), muy presentes en la tradición judía y patrística.<br>
             </p>
             </details>
         </li>
@@ -1296,8 +1296,7 @@
      En contexto litúrgico y pastoral<br>
       •	Este pasaje se proclama en la liturgia en el contexto del Sermón del Monte, especialmente en enseñanzas sobre el Reino de Dios, la confianza en la providencia y la vida interior.<br>
       •	También se usa en la formación espiritual para hablar de la integridad moral, la vigilancia interior y la generosidad.<br>
-      ________________________________________<br>
-      Si deseas, puedo ayudarte a encontrar documentos específicos del Magisterio que desarrollen estos temas, como encíclicas sobre la pobreza, la moral cristiana o la vida interior.<br>
+    
             </p>
             </details>
 
@@ -1307,9 +1306,10 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>De acuerdo a mi Fin es como encaro toda realidad. Desde mis objetivos veo la realidad</li>
+              <li> Si el corazón está orientado hacia Dios, el cuerpo (la vida) se llena de luz.(Agustín ) </li>
+              <li>Para Orígenes el ojo es la capacidad de percibir la luz divina</li>
+              <li>La intención recta es esencial para la moralidad de los actos humanos (CEC 1750) </li>
               <li></li>
             </ol>
           </details>
@@ -1543,7 +1543,7 @@
         </li>
         <!-- ****************************** -->
         <li>
-            <details class="select"></details>
+            <details class="select">
             <summary>Variaciones en el Texto</summary>
             <p>Hay variaciones textuales entre algunas traducciones de Mateo 6:25-34, y estas diferencias pueden afectar ligeramente el matiz del pasaje.<br>A continuación te resumo algunos puntos clave y ejemplos representativos de las principales versiones que mencionas (Jerusalén, Vulgata, NVI, Biblia de las Américas, Interlineal), así como por qué se producen esas variaciones.<br>
       1.	Contexto y sentido central<br>
@@ -1618,9 +1618,6 @@
               • Consulta notas de edición en tus versiones favoritas para ver variantes textuales y su interpretación en cada traductor.<br>
             </p>
           </details>
-
-</p>
-          </details>
         </li>
         <!-- ****************************** -->
         <li>
@@ -1652,12 +1649,10 @@
             </p>
           </details>
 
-</p>
-          </details>
         </li>
         <!-- ****************************** -->
         <li>
-            <details class="select"></details>
+            <details class="select">
             <summary>Patrística</summary>
             <p>Los Padres de la Iglesia comentaron y trataron la perícopa de Mateo 6:25-34 desde distintas perspectivas, destacando temas como la providencia divina, la prioridad del reino de Dios, y la cautela frente al apego a las riquezas.<br>
       Providencia y confianza en Dios<br>
@@ -1707,10 +1702,6 @@
       •	Fuente: Escritos patrísticos de Cirilo que abordan el Sermón del Monte; buscar en ediciones seleccionadas de sus homilías.<br>
             </p>
             </details>
-
-
-</p>
-          </details>
         </li>
         <!-- ****************************** -->
         <li>
@@ -1750,9 +1741,6 @@
               o CIC (diversas secciones sobre la caridad, la justicia, la temperancia, y la cooperación al desarrollo).<br>
               o Documentos de los concilios y encíclicas citadas que conectan fe y acción social.<br>
             </p>
-          </details>
-
-</p>
           </details>
         </li>
         <!-- ****************************** -->
