--- a/ecclesia/lectio/mateo/mateo6.html
+++ b/ecclesia/lectio/mateo/mateo6.html
@@ -1548,7 +1548,7 @@
         <li>
             <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>Hay variaciones textuales entre algunas traducciones de Mateo 6:25-34, y estas diferencias pueden afectar ligeramente el matiz del pasaje.<br>A continuación te resumo algunos puntos clave y ejemplos representativos de las principales versiones que mencionas (Jerusalén, Vulgata, NVI, Biblia de las Américas, Interlineal), así como por qué se producen esas variaciones.<br>
+            <p>Hay variaciones textuales entre algunas traducciones de Mateo 6:25-34, y estas diferencias pueden afectar ligeramente el matiz del pasaje.<br>
       1.	Contexto y sentido central<br>
   <br>• 	Versículos 25-34 forman una unidad en la que Jesús exhorta a no andar ansiosos por las necesidades materiales y a buscar primero el reino de Dios.<br>
   <br>• 	El tema principal es la confianza en el Padre celeste y la prioridad de la vida espiritual sobre la preocupación por el sustento.<br>
@@ -1574,14 +1574,8 @@
       o	Traducción conservadora y muy fiel al texto griego original, con una terminología más formal y precisa, a veces menos “literaria” que la Jerusalén.<br>
   <br>• 	Interlineal <br>
       o	Proporciona una lectura literal palabra por palabra desde griego/hebreo, con una traducción interlineal acompañada de un verso o frase. Puede mostrar variaciones de matiz respecto a las traducciones more fluidas, al resaltar las posibles ambigüedades del texto griego.<br>
-      4.	Implicaciones prácticas para estudio<br>
-  <br>• 	Si tu interés es estudiar el sentido original y las posibles variaciones, el Interlineal es útil para ver cómo se interpretan ciertos vocablos griegos (p. ej., “merimnaō” para preocuparse/angustiarse, “chre” para necesidad).<br>
-  <br>• 	Para uso devocional o litúrgico, las diferencias de estilo entre Jerusalén o NVI pueden cambiar el tono: una lectura más pastoral y reconciliadora (Jerusalén) frente a una lectura más directa y clara (NVI) o más tradicional (LBLA).<br>
-  <br>• 	Si haces exégesis, conviene cotejar varias versiones y consultar el texto griego (empresa de Marcos/André, según el caso) para entender las variantes y las posibilidades de lectura.<br>
-      5.	Recomendaciones si quieres profundizar<br>
-  <br>• 	Compara en paralelo: toma Mateo 6:25-34 en 3–4 versiones (ej.: LBLA, NVI, Jerusalén, Interlineal) y anota dónde cambian palabras clave y cómo cambia la fuerza de la exhortación.<br>
-  <br>• 	Consulta la nota crítica o de edición de cada biblia para entender qué traductor(es) optaron por ciertas palabras y por qué.<br>
-  <br>• 	Si trabajas con estudio bíblico, puedo prepararte una guía de estudio que indique posibles variaciones textuales y preguntas de reflexión para cada versión.<br>
+   
+
             </p>
             </details>
 
@@ -1615,10 +1609,10 @@
           <br>•  En la tradición patrística, hay comentarios que vinculan Mateo 6:25-34 con la virtud de la templanza y la confianza en la Providencia; se citan a menudo en tratados de ética cristiana y en homilías que tratan la riqueza como posible idolatría.<br>
               <br>
               Enfoques útiles para estudiar paralelos<br>
-          <br>•  Estudia las coincidencias y diferencias en el vocabulario clave (por ejemplo, merimnaō en griego para “preocuparse/angustiarse” y chrēia para “necesidades”).<br>
-          <br>•  Compara la estructura literaria: exhortación (no os afanéis) → ejemplos de acción divina (aves, lirios) → mandamiento final de buscar primero el reino.<br>
-          <br>•  Observa el contexto inmediato en Mateo (temas de riquezas y fidelidad) frente a su contexto más amplio en Lucas (depende de la redacción y del tema de la preocupación) para entender variaciones teológicas o pastorales.<br>
-          <br>•  Consulta notas de edición en tus versiones favoritas para ver variantes textuales y su interpretación en cada traductor.<br>
+          <br>•  Estudiar las coincidencias y diferencias en el vocabulario clave (por ejemplo, merimnaō en griego para “preocuparse/angustiarse” y chrēia para “necesidades”).<br>
+          <br>•  Comparar la estructura literaria: exhortación (no os afanéis) → ejemplos de acción divina (aves, lirios) → mandamiento final de buscar primero el reino.<br>
+          <br>•  Observar el contexto inmediato en Mateo (temas de riquezas y fidelidad) frente a su contexto más amplio en Lucas (depende de la redacción y del tema de la preocupación) para entender variaciones teológicas o pastorales.<br>
+       
             </p>
           </details>
         </li>
@@ -1751,10 +1745,17 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>Buscar primero el Reino y su Justicia</li>
+              <li>El amor, el corazón, la fe se ve en la confianza. En la esperanza que se cimenta en Él.</li>
+              <li>La angustia y la preocupación son solo una tentación más</li>
+              <li>Establecer una jerarquía de Objetivos</li>
+              <li>VIDEO COR MEUM EN COTIDIANIBUS ACITIBUS MEIS</li>
+              <li>“La vida no se halla en la abundancia de los bienes, sino en la fidelidad a Dios” Agustín</li>
+              <li> “La Providencia de Dios no es ausencia de esfuerzo humano, sino ordenamiento divino de las cosas.” Crisóstomo</li>
+              <li>La vida debe ser vista desde el Fin, que es Dios</li>
+              <li> Confiar cada día en Dios que me guía en mi trabajo </li>
+              <li> Mi trabajo es buscar a Dios reconocer su Gracia y construir su Reino </li>
+              <li> Hacer el hoy con perspectivas del mañana, el mañana como elemento y criterio de la acción de hoy </li>
             </ol>
           </details>
         </li>
