--- a/ecclesia/lectio/mateo/mateo7.html
+++ b/ecclesia/lectio/mateo/mateo7.html
@@ -719,9 +719,13 @@ Juan 6,60-66	Muchos discípulos abandonan a Jesús por sus enseñanzas difícile
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li>Dejarse guiar por la Gracia, si alguien no está preparado para recibir el mensaje cristiano, trabajar con la Gracia que el Señor le ha dado que lo capacita en la comprensión del mensaje. En su momento, comunicar el mensaje. Discernir la acción del Señor en cada persona.</li>
+              <li>Dejarse guiar por la Gracia</li>
               <li> Establece la regla de tratar lo sagrado con respeto y evitar su profanación.</li>
               <li> Reconoce la libertad del oyente para acoger o rechazar la verdad</li>
+                 <li>Discernir la acción del Espíritu y la Gracia presente para actuar en consecuencia </li>
+            <li>Todos pueden recibir algo, no siempre todo, pero sí lo que el Señor a propuesto, teniendo en cuenta su libertad</li>
+            <li>Solo dar y recibir para lo que estamos preparados y con la Gracia necesaria</li>
+            <li>La formación espiritual debe de adaptarse a la libertad y nivel espiritual del oyente</li>
               <li></li>
            
             </ol>
@@ -773,9 +777,7 @@ Juan 6,60-66	Muchos discípulos abandonan a Jesús por sus enseñanzas difícile
           <details class="select">
             <summary>Variaciones en el Texto</summary>
             <p>
-              Sí, el texto de Mateo 7,7-11 presenta algunas variaciones significativas entre distintas traducciones reconocidas. Aquí te muestro una comparación entre cinco versiones, con un salto de línea marcado por `>br>` en cada versículo para facilitar la lectura:
-
-<br><br>
+              Sí, el texto de Mateo 7,7-11 presenta algunas variaciones significativas entre distintas traducciones reconocidas<br><br>
 
  Biblia de Jerusalén<br>
 Mateo 7,7-11  <br>
@@ -810,7 +812,7 @@ Porque todo el que pide, recibe; el que busca, encuentra; y al que llama, se le 
 ¿Quién de ustedes, si su hijo le pide pan, le da una piedra?<br> 
 ¿O si le pide pescado, le da una serpiente?<br> 
 Pues si ustedes, aun siendo malos, saben dar cosas buenas a sus hijos,<br> 
-¡cuánto más su Padre que está en el cielo dará cosas buenas a los que le pidan!»>br>
+¡cuánto más su Padre que está en el cielo dará cosas buenas a los que le pidan!»<br>
 
 <br><br>
 
@@ -821,7 +823,7 @@ Porque todo el que pide, recibe; y el que busca, halla; y al que llama, se le ab
 ¿O qué hombre hay entre vosotros que si su hijo le pide pan, le dará una piedra,<br> 
 o si le pide un pescado, le dará una serpiente?<br> 
 Pues si vosotros, siendo malos, sabéis dar buenas dádivas a vuestros hijos,<br> 
-¿cuánto más vuestro Padre que está en los cielos dará cosas buenas a los que le piden?>br>
+¿cuánto más vuestro Padre que está en los cielos dará cosas buenas a los que le piden?<br>
 
 <br><br>
 
@@ -836,7 +838,7 @@ y al que llama, se le abrirá.<br>
 ¿Quién de vosotros, si su hijo le pide pan, le dará una piedra?<br> 
 ¿O si le pide pescado, le dará una serpiente?<br> 
 Si vosotros, siendo malos, sabéis dar buenos dones a vuestros hijos,<br> 
-¿cuánto más vuestro Padre celestial dará cosas buenas a los que le piden?>br>
+¿cuánto más vuestro Padre celestial dará cosas buenas a los que le piden?<br>
 
               <br />
               <br />
@@ -976,7 +978,7 @@ La oración cristiana busca ante todo la unión con Dios y la vida en el Espíri
 La oración no solo cambia las circunstancias, sino que transforma al que ora.<br>  
 El Magisterio insiste en que la oración perseverante purifica los deseos y fortalece la fe.<br><br>
 
-Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre Mateo 7,7-11].  <a href="https://www.revistabiblica.com/ojs/index.php/RB/article/view/116">Revista Bíblica y Etológica Argentina</a>
+Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre Mateo 7,7-11].  <a href="https://www.revistabiblica.com/ojs/index.php/RB/article/view/116">Revista Bíblica y Teológica Argentina</a>
 
               <br />
               <br />
@@ -987,10 +989,14 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+            <li>El Señor nos anima a estar en contacto con Él, a pedir como una forma de comunicarse y reconocer que el Bien viene de su parte</li>
+            <li>La perseverancia como característica de la relación con Dios</li>
+            <li>Lo que hace eficaz a la oración es el amor de Dios, y lo que hace grata la oración es la perseverancia y confianza del hombre</li>
+            <li>El Fin de la oración es Dios mismo. </li>
+            <li>Nos enseña a estar dispuestos a dar, lo conveniente en el momento correcto</li>
+            <li></li>
+          </ol>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
