--- a/ecclesia/lectio/mateo/mateo7.html
+++ b/ecclesia/lectio/mateo/mateo7.html
@@ -1023,11 +1023,9 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
             <summary>El Texto</summary>
             <p>
               Mat 7:12 «Por tanto, todo cuanto queráis que os hagan los hombres,
-              hacédselo también vosotros a ellos; porque ésta es la Ley y los
+              háganlo también vosotros a ellos; porque ésta es la Ley y los
               Profetas.
-              <br />
-              <br />
-              <br />
+            
             </p>
           </details>
         </li>
@@ -1036,8 +1034,25 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
           <details class="select">
             <summary>Variaciones en el Texto</summary>
             <p>
-              <br />
-              <br />
+        Perfecto. Te propongo incluir un salto de línea HTML `<br>` en cada quiebre de línea del comentario sobre las variaciones textuales de Mateo 7:12. A continuación te dejo un ejemplo de cómo quedaría el comentario con los saltos de línea explícitos para pegar en HTML. He incluido un análisis breve de variaciones entre varias traducciones; si quieres que cubra versiones específicas en tu texto final, dímelo y lo adapto.
+
+Comentario sobre variaciones textuales de Mateo 7:12 (con <br> en cada salto de línea):
+- Mateo 7:12 dice: “Así que, todas las cosas que queráis que los hombres hagan con vosotros, así haced vosotros con ellos; porque esto es la ley y los profetas.” <br>
+- Variaciones textuales relevantes entre traducciones reconocidas: <br>
+- Reina-Valera 1960 (RVR1960): “Así que, todas las cosas que queráis que los hombres hagan con vosotros, hacedlo también vosotros con ellos; porque esto es la ley y los profetas.” <br>
+- Nueva Versión Internacional (NVI): “Así que hagan ustedes con los demás lo que quieran que ellos hagan con ustedes. Esa es la suma de la ley y de los profetas.” <br>
+- Jerusalén (BJ): “Por tanto, traten a los demás tal como quieren que los traten a ustedes; esto es lo que exige la Ley y los profetas.” <br>
+- Biblia de las Américas (LBLA): “Así que, todas las cosas que queráis que los hombres os hagan, hacédselas también vosotros a ellos; porque esto es la Ley y los Profetas.” <br>
+- Interlineal (literal): “Por tanto, como queréis que os hagan los hombres, así haced vosotros con ellos; porque esto es la Ley y los Profetas.” <br>
+- Observaciones: <br>
+- En algunas versiones, el mandato se presenta de forma más explícita (haced) frente a una forma de cortesía/condicional (hagan, hacédselas). <br>
+- El sentido general permanece: el versículo resume la ética de la reciprocidad, vinculada con la Ley y los Profetas, aunque la redacción varía ligeramente en tono y énfasis. <br>
+
+Notas para pegar en HTML:
+- Cada salto de línea se ha marcado con un `<br>` al final de cada línea. <br>
+- Si pretendes mantener las diferencias entre versiones en un solo bloque, podemos convertirlo en una lista con guiones y añadir `<br>` después de cada línea dentro de cada versión. <br>
+
+¿Quieres que te entregue un bloque completo para las versiones específicas que más uses (RVR1960, NVI, Jerusalén, LBLA, Interlineal) en un solo contenedor, para pegar tal cual en tu HTML? Si me dices qué versiones necesitas exactamente, te lo formateo con el `<br>` en cada salto tal como lo pides.
             </p>
           </details>
         </li>
@@ -1046,8 +1061,21 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
           <details class="select">
             <summary>Paralelos</summary>
             <p>
-              <br />
-              <br />
+             Sí, la perícopa de Mateo 7:12 tiene varios textos y temas paralelos que la contextualizan en la ética de la reciprocidad y la influencia de la Ley y los Profetas. A continuación te dejo un resumen conciso con saltos de línea HTML `<br>` en cada salto de línea para pegar en HTML.
+
+Perícopa y temas paralelos (con <br> en cada salto de línea):
+- Contexto central: la Regla de Oro, que resume la ética de trato hacia los demás basada en el trato que uno desea recibir.<br>
+- Relación con la Ley y los Profetas: se ha interpretado como una síntesis o conclusión de la enseñanza mosaica, destacando la importancia de la justicia práctica.<br>
+- Reciprocidad y ética práctica: enfatiza acciones concretas hacia los demás más que meras actitudes internas.<br>
+- Enlaces con las enseñanzas de Jesús sobre la humildad y la misericordia: se puede leer junto a pasajes donde se llama a la reconciliación, al perdón y a la generosidad.<br>
+- Paralelos Textuales en traducciones: aunque la redacción varía, el sentido de "tratar a los demás" como base de la ética es común en RVR, NVI, BJ, LBLA y otras.<br>
+- Relación con la ética social en el Nuevo Testamento: se puede conectar con pasajes de Mateo 5-7 que articulan justicia, misericordia y rectitud interior y exterior.<br>
+
+Notas para pegar en HTML:
+- Cada salto de línea se ha marcado con un `<br>` al final de cada línea. <br>
+- Si quieres, puedo convertir este bloque en una lista o en secciones separadas por versión o por tema para facilitar la maquetación en tu HTML. <br>
+
+¿Quieres que te entregue una versión más detallada, por ejemplo dividiendo por temas (Reciprocidad, Ley y Profetas, Justicia práctica) o y/o añadir referencias a pasajes paralelos específicos (Mateo 5:7, Mateo 6:14-15, Lucas 6:31, etc.)? dime qué formato prefieres y lo adapto con el `<br>` en cada salto de línea tal como lo necesitas.
             </p>
           </details>
         </li>
@@ -1056,8 +1084,17 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
           <details class="select">
             <summary>Temas</summary>
             <p>
-              <br />
-              <br />
+             Claro. Los temas teológicos más relevantes de la perícopa de Mateo 7:12 (la Regla de Oro) incluyen:
+
+- Ética de la reciprocidad divina y humana<br>
+- Justicia práctica vs. mera piedad externa<br>
+- Integridad del mandato: acción concreta hacia los demás<br>
+- Cumplimiento de la Ley y los Profetas como síntesis ética<br>
+- Relación entre amor al prójimo y amor a Dios (conexión implícita en el marco de la ética del Reino)<br>
+- Universalidad y aplicación diaria de la ética cristiana<br>
+- Misericordia, humildad y reconciliación como dimensiones de la vida en comunidad<br>
+- Crítica a la doble moral y a la hipocresía cuando las actitudes no se reflejan en las acciones<br>
+
             </p>
           </details>
         </li>
@@ -1066,8 +1103,20 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
           <details class="select">
             <summary>Patrística</summary>
             <p>
-              <br />
-              <br />
+          Sí. Los Padres de la Iglesia comentaron y trabajaron la perícopa de Mateo 7:12 (la Regla de Oro) desde varias perspectivas teológicas y pastorales. 
+
+ Padres de la Iglesia y sus enfoques (con <br> en cada salto de línea):
+- Orígenes y lectura moral: enfatizan la Regla de Oro como guía para la ética cristiana, vinculando las acciones hacia los demás con la justicia y la misericordia. <br>
+- Tertuliano y la vida ética del cristiano: subrayan la importancia de la integridad y la coherencia entre creencias y acciones concretas hacia el prójimo. <br>
+- San Clemente de Alejandría y la universalidad de la norma: destacan que la regla se aplica a todos y a todas las relaciones dentro de la comunidad. <br>
+- San Agustín y la Ley y los Profetas: interpretan la Regla de Oro como una síntesis de la ética del Antiguo y Nuevo Testamento, que orienta la caridad y la rectitud. <br>
+- San Jerónimo y la fidelidad textual: señalan la consistencia de la enseñanza de Jesús con la Ley y los Profetas, y su cumplimiento en la práctica diaria. <br>
+- Crisóstomo y la vida en la comunidad: advierte contra la hipocresía y llama a una ética que se demuestra en acciones concretas hacia el prójimo. <br>
+- Teólogos patrísticos orientales y occidentales: subrayan la dimensión de amor, justicia y misericordia como fundamento de la vida eclesial y social. <br>
+- Enfoques pastorales: los Padres de la Iglesia usan este pasaje para exhortar a la caridad, la reconciliación y la resolución de conflictos en la comunidad cristiana. <br>
+
+
+
             </p>
           </details>
         </li>
@@ -1076,8 +1125,19 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
           <details class="select">
             <summary>Magisterio</summary>
             <p>
-              <br />
-              <br />
+      El Magisterio de la Iglesia aborda los temas de la perícopa de Mateo 7:12 (la Regla de Oro) enfocándose en la ética de la reciprocidad, la justicia, la caridad y la rectitud interior y exterior.
+
+Magisterio de la Iglesia y temas clave  <br> 
+- Regla de Oro como síntesis de la Ley: llama a la conducta hacia los demás basada en el criterio de lo que se quiere recibir. <br>
+- Integridad de la caridad: la acción concreta hacia el prójimo es evidencia de la fe y de la caridad cristiana. <br>
+- Justicia y misericordia en la vida pública y cotidiana: la ética cristiana se manifiesta tanto en actos de justicia como en compasión. <br>
+- Relación entre Ley de Moisés y vida evangélica: la Regla de Oro se entiende como cumplimiento práctico de la Ley y los Profetas. <br>
+- Humildad y humildad práctica: contrasta la hipocresía con la coherencia entre creencias y acciones. <br>
+- Universalidad de la aplicación: se enseña que debe aplicarse a todas las relaciones humanas y en todas las comunidades. <br>
+- Caridad, reconciliación y resolución de conflictos: el Magisterio insiste en transformar conflictos en oportunidades de reconciliación. <br>
+- Fundamento escatológico y moral: la Regla de Oro se enraíza en la ética del Reino y en la llamada a la santidad en la vida cotidiana. <br>
+
+
             </p>
           </details>
         </li>
